[Fix] Fix not centered image

--- a/statics/css/style.sass
+++ b/statics/css/style.sass
@@ -319,6 +319,9 @@ body, html
     .col-12
         width: 100%
 
+.row-centered *
+    margin: 0 auto
+
 .counter-group
     text-align: center
     font-family: gravity-light
